--- a/gradle.properties
+++ b/gradle.properties
@@ -1,1 +1,19 @@
 org.gradle.java.home=F:\\apps\\jdk\\8
+
+#Versions
+springVersion=5.0.0.RELEASE
+javaServletApiVersion=3.0.1
+javaServletJstlVersion=1.2
+javaServletJpsVersion=2.3.1
+slf4jVersion=1.7.6
+log4jVersion=1.2.17
+mySqlVersion=6.0.6
+apacheTilesVersion=3.0.7
+apacheRequestAPIVersion=1.0.6
+apacheCommonsLang3Version=3.5
+velocityVersion=2.0
+freeMarkerVersion=2.3.15
+mvelVersion=2.0.11
+ognlVersion=2.7.3
+jacksonVersion=2.9.1
+gradleVersionWrapper=3.4
